Fix messages text

--- a/server/templates/email-confirmed.html
+++ b/server/templates/email-confirmed.html
@@ -42,7 +42,7 @@
     }
 </style>
 <body>
-<p>Your email {{.email}} has been confirmed and whitelist process is initiated now. <br> Please be patient and wait for the notification letter.</p>
+<p>Your email {{.email}} has been confirmed.<br>And the whitelist process has been initiated. <br> Please be patient and wait for the notification letter.</p>
 <a class="link-to-mdl" href="https://mdl.life/">MDL <span>Talent Hub</span></a>
 </body>
 </html>
